# walkforward-trading-backtest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: eda_placeholder.md
src/backtest/: metrics.py  walkforward.py
src/data/: download_prices.py  make_dataset.py
src/features/: build_features.py
src/strategies/: signals.py
src/utils/: config.py  logging.py
tests/: test_backtest_smoke.py  test_download_smoke.py
